--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,9 @@ h3{
     .title{
         padding-top: 10vh;
     }
+    #message{
+        display:none;
+    }
 }
 @media only screen and (min-width: 1200px) {
     button{
