--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
+html{
+    width: 100vw;
+    overflow: hidden;
+}
 body{
-    width: 100vw;;
+    width: 100%;
     height: 100vh;
     background-color: #333;
     font-family: 'Courier New', Courier, monospace;
@@ -9,16 +13,6 @@ body{
     display: block;
     text-align: center;
     color: green;
-}
-.rules{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.rules>div{
-    margin-left: 10px;
-    margin-right: 10px;
-    color: whitesmoke;
 }
 .buttons{
     width: 100%;
@@ -48,6 +42,8 @@ h2{
     text-decoration: underline;
 }
 h3{
+    margin: 0 auto;
+    max-width: 80%;
     color: white;
 }
 .gold{
@@ -55,6 +51,9 @@ h3{
 }
 .red{
     color: red;
+}
+h1, h2, h3{
+    overflow-wrap: break-word;
 }
 @media only screen and (max-width: 1200px) {
     h1, h2{
